persist grafana data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       - ./config/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources:ro
       - ./config/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards:ro
       - ./config/grafana/dashboards:/var/lib/grafana/dashboards:ro
+      - /docker_data/grafana_data:/var/lib/grafana
+      - /docker_data/certs:/certs
   loki:
     command: -config.file=/etc/loki/loki-config.yml
     container_name: loki
