persist grafana data in volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,11 +28,10 @@ services:
         target: 3000
     restart: always
     volumes:
-      - ./config/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources:ro
-      - ./config/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards:ro
-      - ./config/grafana/dashboards:/var/lib/grafana/dashboards:ro
-      - /docker_data/grafana_data:/var/lib/grafana
-      - /docker_data/certs:/certs
+      - ./config/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+      - ./config/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - ./config/grafana/dashboards:/var/lib/grafana/dashboards
+      - grafana-storage:/var/lib/grafana
   loki:
     command: -config.file=/etc/loki/loki-config.yml
     container_name: loki
